src/test/deca/context/valid/if_several_operations.deca
// Test context, we do several operations in the condition in a row
// if the types are consistent

{
    int x = 5;
    int y = 6;
    if (x < y != false) {
        print(x);
    }
}