src/test/deca/context/invalid/inst_return_in_void_method_else.deca
// Test of the rule (3.24): not possible to return something
// when we are not expecting a return in else

class A  {

    void voidMethod(){
        int x = 12;
        if (false){
            x = 5;
        }
        else{
            return x;
        }
        
    }
}



// Resultat:
//# TODO message error
